--- a/site/styles.css
+++ b/site/styles.css
@@ -22,6 +22,10 @@ img {
     padding-bottom: 30px;
 }
 
+#charttitle{
+    margin-top: 0;
+}
+
 h1 {
     padding-top: 20px;
     padding-bottom: 30px;
@@ -45,18 +49,9 @@ p {
     clear: both;
 }
 
-
-
-
-}
-.dropdown{
-    
-    position: absolute;
-    padding-top: 60px;
-    padding-left: 40px;
-   
-
-
+#dropdown{
+  margin-top: .50em;
+  margin-bottom: 1.75em;
 }
 
 .myImage{
@@ -77,54 +72,7 @@ p {
     padding-left: 60px;
     padding-right: 60px;
     padding-top:60px;
-
-
 }
-
-.tooltip {
-    position: relative;
-    display: inline-block;
-    border-bottom: 1px dotted black;
-}
-
-.tooltip .tooltiptext {
-    visibility: hidden;
-    width: 120px;
-    background-color: #555;
-    color: #fff;
-    text-align: center;
-    border-radius: 6px;
-    padding: 5px 0;
-    position: absolute;
-    z-index: 1;
-    bottom: 125%;
-    left: 50%;
-    margin-left: -60px;
-    opacity: 0;
-    transition: opacity 0.3s;
-}
-
-.tooltip .tooltiptext::after {
-    content: "";
-    position: absolute;
-    top: 100%;
-    left: 50%;
-    margin-left: -5px;
-    border-width: 5px;
-    border-style: solid;
-    border-color: #555 transparent transparent transparent;
-}
-
-.tooltip:hover .tooltiptext {
-    visibility: visible;
-    opacity: 1;
-
-
-
-
-
-
-
 
 
 .wrapper{
@@ -135,46 +83,8 @@ p {
 
 }
 
-.search-box{
-    width:450px;
-    height:100px;
-    position: relative;
-}
-
-.input{
-    position: absolute;
-    top: 20px;
-    right:50px;
-    box-sizing: border-box;
-    width: 350px;
-    height: 63px;
-    border: 3px solid #023436;
-    border-radius: 50px;
-    padding: 0 20px;
-    outline:none;
-    font-size: 18px;
-    color: #29313a;
-    
-
-}
  /*  For Chrome*/
 ::-webkit-input-placeholder{
     color:#023436;
 }
 
-.button{
-    position: absolute;
-    width: 60px;
-    height: 60px;
-     background:#023436;
-    border-radius: 50%;
-    top:19px;
-    right:45px;
-    cursor: pointer;
-    text-align:center;
-    line-height: 70px;
-    font-size:30px;
-    color: #fff;
-
-    
-}
